--- a/I2c Comm/Debug/makefile
+++ b/I2c Comm/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: I2c\ Comm.elf secondary-outputs
 
 # Tool invocations
-I2c\ Comm.elf I2c\ Comm.map: $(OBJS) $(USER_OBJS) D:\Matching_Network\I2c\ Comm\STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "I2c Comm.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\Matching_Network\I2c Comm\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="I2c Comm.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+I2c\ Comm.elf I2c\ Comm.map: $(OBJS) $(USER_OBJS) C:\Users\AdityaSingh\Desktop\Stm32\I2c\ Comm\STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "I2c Comm.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\AdityaSingh\Desktop\Stm32\I2c Comm\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="I2c Comm.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
